--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,10 @@ baseurl:          null
 paginate:         7
 rss:              'atom.xml'
 
+# About
+author:
+  name:           'Phi Luu'
+
 # List of pages to include in the masthead of the website
 pages_list:
   About:          '/about'
@@ -72,6 +76,6 @@ whitelist:
 
 # Outputting
 permalink:        pretty
-paginate:         5                      # amount of posts to show
+paginate:         7                      # amount of posts to show per page
 paginate_path:    '/page:num'
 timezone:         'America/Los_Angeles'  # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
